src/objects/P7S1_Country__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alpha_2_Code__c</fullName>
        <label>Alpha-2 Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Alpha_3_Code__c</fullName>
        <label>Alpha-3 Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Name_DE__c</fullName>
        <label>Name DE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <label>Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_Code__c</fullName>
        <label>Numeric Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Abbreviation__c</fullName>
        <description>Abkürzung des Landes, wie von ProDia benötigt.</description>
        <inlineHelpText>Abkürzung des Landes, wie von ProDia benötigt.</inlineHelpText>
        <label>P7S1 Abkürzung</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <description>Nutzt das Hüllenmodel (Sphere) für alle Unternehmensbereiche welche die zentrale sf.com-Instance nutzen - Kann zum filtern genutzt werden</description>
        <label>P7S1 Sphere</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Aer</fullName>
                </value>
                <value>
                    <fullName>S71</fullName>
                </value>
                <value>
                    <fullName>Sgn</fullName>
                </value>
                <value>
                    <fullName>SomAt</fullName>
                </value>
                <value>
                    <fullName>SomCh</fullName>
                </value>
                <value>
                    <fullName>SomDe</fullName>
                </value>
                <value>
                    <fullName>Ven</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_Steuerkennzeichen__c</fullName>
        <description>Zuordnung Land zu Steuerkennzeichen</description>
        <inlineHelpText>AE = EU-Land; AS = Deutschland; AD = Rest</inlineHelpText>
        <label>Steuerkennzeichen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                    <default>true</default>
                    <label>AD</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>P7S1_TopCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country will be sorted in top part of select list</description>
        <inlineHelpText>Country will be sorted in top part of select list</inlineHelpText>
        <label>Top Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_International__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Not DACH Region</description>
        <inlineHelpText>Not DACH Region</inlineHelpText>
        <label>Ventures International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ven_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Land (P7S1)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Name_DE__c</columns>
        <columns>P7S1_Abbreviation__c</columns>
        <columns>Name_EN__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Alpha_2_Code__c</columns>
        <columns>Alpha_3_Code__c</columns>
        <columns>P7S1_Steuerkennzeichen__c</columns>
        <columns>Numeric_Code__c</columns>
        <columns>P7S1_Sphere__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EU</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Name_DE__c</columns>
        <columns>P7S1_Abbreviation__c</columns>
        <columns>Alpha_2_Code__c</columns>
        <columns>Alpha_3_Code__c</columns>
        <columns>P7S1_Steuerkennzeichen__c</columns>
        <columns>Numeric_Code__c</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Steuerkennzeichen__c</field>
            <operation>equals</operation>
            <value>AE</value>
        </filters>
        <label>EU</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TopCountries</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Alpha_2_Code__c</columns>
        <columns>Alpha_3_Code__c</columns>
        <columns>P7S1_Abbreviation__c</columns>
        <columns>Name_DE__c</columns>
        <columns>Numeric_Code__c</columns>
        <columns>P7S1_Sphere__c</columns>
        <columns>P7S1_TopCountry__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_TopCountry__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Top Countries</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Länder (P7S1)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>